- Fixed bug #29361 (var_export() producing invalid code). (Derick)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@198609 c90b9560-bf6c-de11-be94-00142212c4b1